--- a/testTemplate.html
+++ b/testTemplate.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/settings.min.js"></script>
-    <script src="js/jquery.min.js"></script>e
+    <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migration.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/autocomplete.min.js"></script>
